--- a/app/views/urls/_form.html.slim
+++ b/app/views/urls/_form.html.slim
@@ -1,15 +1,8 @@
 = form_for @url do |f|
-  - if @url.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@url.errors.count, "error")} prohibited this url from being saved:"
-      ul
-        - @url.errors.full_messages.each do |message|
-          li = message
-
-  .field
-    = f.label :long
-    = f.text_field :long
-  .field
-    = f.label :short
-    = f.text_field :short
-  .actions = f.submit 'Save'
+  .notice-container
+    - if @url.errors.any?
+      .alert.alert-danger Unable to shorten URL, make sure you are inputting a valid URL.
+  .input-group
+    = f.text_field :long, label: false, placeholder: 'http://www.example.com/', class: 'form-control input-lg'
+    span.input-group-btn
+      = f.submit "Create", class: 'btn btn-primary btn-lg', data: { 'loading-text' => 'Creating...' }
