--- a/app/views/urls/index.html.slim
+++ b/app/views/urls/index.html.slim
@@ -1,23 +1,27 @@
-h1 Listing urls
+.jumbotron
+  h1 RFL's URL shortening service
+  p Fancy a short URL? Create one right here!
+  .row
+    .col-sm-8.col-sm-offset-2
+      = render 'urls/form'
+      /form.form action="/_" method="post"
+        .input-group
+          input#url_long.form-control.input-lg name="url[long]" type="url" size="255" maxlength="255" placeholder="http://www.example.com/"
+          span.input-group-btn
+            button.btn.btn-primary.btn-lg type="submit" name="commit" Create
 
-table
-  thead
-    tr
-      th Long
-      th Short
-      th
-      th
-      th
-
-  tbody
-    - @urls.each do |url|
-      tr
-        td = url.long
-        td = url.short
-        td = link_to 'Show', url
-        td = link_to 'Edit', edit_url_path(url)
-        td = link_to 'Destroy', url, data: {:confirm => 'Are you sure?'}, :method => :delete
-
-br
-
-= link_to 'New Url', new_url_path
+.row
+  .col-md-12
+    table.table.table-striped
+      thead
+        tr
+          th Long
+          th Short
+          th Created
+      tbody
+        - @urls.each do |url|
+          tr
+            td = link_to url.long, url.long
+            td = link_to goto_url(url.short), goto_path(url.short)
+            td #{time_ago_in_words(url.created_at)} ago
+    = paginate @urls
