--- a/app/views/urls/new.html.slim
+++ b/app/views/urls/new.html.slim
@@ -1,5 +1,5 @@
-h1 New url
-
-== render 'form'
-
-= link_to 'Back', urls_path
+.row
+    .col-md-10.col-md-offset-1
+        h1 New URL
+        == render 'form'
+        .text-center = link_to 'Back', urls_path, class: 'btn btn-link'
