--- a/app/views/urls/show.html.slim
+++ b/app/views/urls/show.html.slim
@@ -1,12 +1,7 @@
-p#notice = notice
+.text-center
+    h3
+        strong> = link_to goto_url(@url.short), goto_path(@url.short)
+        | links to
+        strong< = link_to @url.long, @url.long
 
-p
-  strong Long:
-  = @url.long
-p
-  strong Short:
-  = @url.short
-
-= link_to 'Edit', edit_url_path(@url)
-'|
-= link_to 'Back', urls_path
+    = link_to 'Back', urls_path, class: 'btn btn-link'
