Add more anti-spam measures

--- a/app/views/urls/_form.html.slim
+++ b/app/views/urls/_form.html.slim
@@ -1,4 +1,5 @@
 = form_for @url do |f|
+  = f.email_field :email, label: false, placeholder: 'Typing in this brings death'
   .notice-container
     - if @url.errors.any?
       .alert.alert-danger Unable to shorten URL, make sure you are inputting a valid URL.
