--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,6 +5,7 @@ html
         == stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
         == javascript_include_tag "application", "data-turbolinks-track" => true
         == csrf_meta_tags
+        meta name="robots" content="noindex, nofollow"
     body
         .navbar.navbar-inverse.navbar-static-top role="navigation"
             .container
